exports[`DetailDisplay displays one detail resource 1`] = `
<div>
  <ul>
    <li>
      Title: 
      a
    </li>
    <li>
      Url: 
      b
    </li>
    <li>
      Description: 
      c
    </li>
  </ul>
  <button
    onClick={[Function]}>
    delete
  </button>
</div>
`;

exports[`GalleryDisplay displays one gallery resource 1`] = `
<div>
  <h1>
    Title: 
    a
  </h1>
  <img
    alt="Cute Bunny"
    className="gallery"
    src="b" />
  <p>
    Description: 
    c
  </p>
  <button
    onClick={[Function]}>
    delete
  </button>
</div>
`;

exports[`ThumbnailDisplay displays one thumbnail resource 1`] = `
<div>
  <h1>
    Title: 
    a
  </h1>
  <img
    alt="Cute Bunny"
    className="thumbnail"
    src="b" />
  <button
    onClick={[Function]}>
    delete
  </button>
</div>
`;
